<resources>
    <string name="app_name">assessement3_pmg</string>
    <string name="event1">Glasgow Film Festival is one of the leading UK film festivals, with the GFF programme regularly featuring: new local and international film from all genres; mainstream crowd-pleasers to groundbreaking art-house experimentation; the return of well-loved classics alongside rare cult gems; with filmmaker guest appearances, interactive workshops and discussion panels to complete the mix!</string>
    <string name="event2"><![CDATA[The Glasgow International Comedy Festival returns Thursday 8 - Sunday 25 March 2018 and they\'ll be inviting some of our favourite comedy friends, top television names and spectacular stand-up stars to stages across Glasgow.  The full programme will be released soon. To keep up to speed until then, sign-up for their e-newsletter and follow them on Twitter (@GlasgowComedy) & Instagram (glasgowcomedy)]]></string>
    <string name="food_drink"><![CDATA[food & drink]]></string>
    <string name="top_reasons_visiting">Officially the world’s friendliest city, you know you’ll be guaranteed a warm welcome in Glasgow, and there is so much to explore and enjoy in this beautiful, vibrant city. No matter when you visit, you’ll find world-class visitor attractions, diverse neighbourhoods, stunning architecture, an ever-evolving food and drink scene and legendary nightlife.  The city also has a year-round calendar bursting at the seams with amazing events and festivals and 2018 is set to be bigger and busier than ever! \n\nThe year kicks off with the UK’s premier celebration of Celtic music, Celtic Connections which marks its 25th anniversary, and there is also a programme of events planned throughout the year to mark the 150th anniversary of pioneering architect Charles Rennie Mackintosh.  The city has a summer jam-packed with culture and music festivals including the Merchant City Festival, West End Festival and Trnsmt, and as a great sporting city, it’s fitting that this year Glasgow will host the inaugural European Championships. Check out our list of just some of the highlights in Glasgow in 2018. \n\nThe New York Times has named Glasgow as one of the top 52 places (that\'s one every week!) in the world to visit in 2018 so what better time to make your NEXT STOP GLASGOW!</string>
    <string name="visiting_one">Housing one of Europe’s largest civic art collections, the city has a fantastic mix of world-class museums, galleries and award-winning visitor attractions including Kelvingrove Art Gallery and Museum and Riverside Museum, with many free to visit.  From a cutting edge arts scene that’s envied across the globe to family friendly attractions and unique visitor experiences like the brand new Clydeside Distillery, there really is something for everyone.  It’s also the only place in the world that has a concentration of attractions and architecture created by iconic Glaswegian architect and designer, Charles Rennie Mackintosh.</string>
    <string name="visiting_two">Glasgow has an ever evolving food and drink scene and Finnieston is considered the city’s ‘foodie quarter’ with a brilliant mix of cool, quality and affordable venues.  Our chefs are able to source some of the best local produce in the world, so it’s no surprise our restaurants are receiving plaudits in influential guides including Conde Nast Traveller\'s – The Gold List 2018 (The Gannet) and the Michelin Guide (Alchemilla and Bilson Eleven).  And as we head into 2018, already dubbed as the ‘Year of Veganism’ it’s good to know that Glasgow is the UK’s most Vegan Friendly city.   When it comes to bars, it’s no longer just about the whisky, Glasgow is firmly part of the craft beer and gin revolution with a number of independent breweries and dedicated gin bars popping up across the city.</string>
    <string name="visiting_three">If you ask a local what to see and do in the city, many will tell you to take a walk and “look up” to really appreciate Glasgow’s rich and varied architectural heritage.  From the medieval Glasgow Cathedral to the Neo-Gothic University of Glasgow – rumoured to be the inspiration for Harry Potter\'s Hogwarts - to the Art Nouveau wonders of Charles Rennie Mackintosh.   Glasgow’s wealthy past has left a legacy of the finest Victorian architecture in the UK but you only have to take short stroll along the ever-changing riverside to see innovative, cutting-edge designs.</string>
    <string name="visiting_four">Charles Rennie Mackintosh was a pioneering Glaswegian architect and designer and no trip to the city is complete without a visit to one of his magnificent works.  From the Mackintosh House, a collection of items from his original home, to the stunning House for an Art Lover and renowned Glasgow School of Art – considered Mackintosh’s masterpiece.  2018 marks the 150th anniversary of Mackintosh’s birth and a year-long programme of events will take place to celebrate the incredible legacy and creative genius of Glasgow\'s great cultural icon.  Highlights include a major exhibition ‘Charles Rennie Mackintiosh Making the Glasgow Style’ at Kelvingrove Art Gallery and Museum as well as the opening of Mackintosh at the Willow, Miss Cranston\'s original Tea Rooms in Sauchiehall Street.</string>
    <string name="visiting_five">Tours are a great way of seeing Glasgow and learning fascinating facts about the city from expert locals.  There are a number of walking tours on offer where knowledgeable guides can help you explore the city themed around everything from food and music to history and architecture.  You can also take guided tours of many of the city’s venues, from breweries to Glasgow Central Railway Station or City Chambers.  Take things at your own pace by following a self-guided trail around the murals or Mackintosh properties. The City Sightseeing Glasgow hop on, hop off bus is also a fantastic way to get yourself acquainted!</string>
    <string name="useful_info"><![CDATA[Language - English\n\nCurrency - Pound Sterling (£)\n\nMoney - ATMs widely available. There are also a number of Bureaux de Change. Credit and debit cards accepted in most hotels, restaurants and shops. Some smaller shops and guesthouse accommodation may only accept cash.\n\nTime Zone - Glasgow\'s timezone is Greenwich Mean Time (GMT) or one hour ahead of GMT, known as British Summer Time (BST), during the summer months.\n\nClimate - Spring (March – May) in Glasgow enjoys mild temperatures with the city’s parks and gardens filled with spring flowers. The summer months (June to September) can vary between mild and warm and sunny, with the advantage of up to 16 hours of daylight for visitors throughout the summer. Winters are colder, with a January average of 4.0°C (39°F) and occasional snow.]]></string>
    <string name="useful_info2"><![CDATA[City Map - Download our handy Glasgow City Map for hints and tips on places to visit in Glasgow, theatres, concert halls, shopping centres and more. It\'s the perfect print out guide to Glasgow to take with you on your holiday.  VisitScotland iCentre - Visit Scotland\'s iCentres in Glasgow are located at Kelvingrove Art Gallery & Museum (Argyle St, G3 8AG) and also the Gallery of Modern Art (Royal Exchange Square, G1 3AH). Visitors will be able to speak to VisitScotland’s Visitor Service Advisors, make cashless ticket and accommodation bookings and pick up a range of information to take with them on their travels around Glasgow and across Scotland. For more info visit their website.\n\nTipping - There are no hard and fast rules for tipping in Glasgow. If you are happy with the service, a 10-15% tip is customary, particularly in restaurants or cafés. Tipping in bars is not expected. For taxi fares, it’s usual to round up to the nearest pound (£).\n\nSmoking - Smoking is banned in all public places including all enclosed or partly enclosed public areas.\n\nTelephone codes - The UK country code is 44, while Glasgow landlines start with a 141 area code, followed by a 7 digit number. To call abroad, dial 00 before the area code.\n\nShopping - City centre shops are generally open Monday to Friday until at least 7pm and from 10am until 6pm on Saturdays and Sundays. Late night shopping is on Thursdays, with many stores open until 8pm.\n\nVAT (Tax) - All purchases, with the exception of food, books and children\'s clothing, are subject to VAT, which is currently 20%. This is already included in the price shown in shops. Visitors from non-EU countries can claim a refund of VAT from selected shops on goods to be taken out of the country under the Retail Export Scheme. You can find information on how to reclaim sales tax by visiting the HM Revenue & Customs website.\n\nSafety - Glasgow is like any other big city and basic common sense rules apply. The centre of Glasgow is very safe and you should not encounter any problems. During the day, Police Officers and Community Enforcement Officers should be able to assist you if needed.\n\nEmergency services - In case of an emergency the police, ambulance or fire brigade service can be contacted by telephoning 999.\n\nVisa requirements - Visitors to Scotland must hold a valid passport before starting their journey and children may require their own passports.\nAll visitors who wish to enter the UK must meet the requirements of the UK immigration regulations.\nEU citizens can stay in Scotland for as long as required. Visitors from other European countries outside the EU can stay for up to three months.\nVisitors from the USA, Canada, Australia or New Zealand, can stay for up to six months, providing they have a return ticket and funds to cover the trip.\nVisitors from any other country in the world will require a visa.\nApplication forms and information on how to apply for a visa, as well as guidance for visitors coming to the UK, is available on the UK Border Agency website.\n\nDriving - Driving is on the left hand side of the road. To drive in Scotland, you must have a valid driving licence. A foreign licence is valid in the UK for up to 12 months. It is compulsory to wear seat belts in the front seat and if your car has seat belts in the back, they must also be worn.\n\nHealth - No vaccinations are required for visiting Scotland. When travelling to Scotland from outside of the UK, make sure you know what emergency healthcare you are entitled to, what medicines you can bring into the country, what to do in an emergency, and what travel insurance you will need. The Scottish Government provides detailed information on healthcare for overseas visitors in PDF, audio and large-print formats.\n\nElectricity & conversions - The standard voltage in Scotland is 240V AC, 50Hz. North American appliances need a transformer and an adapter; Australasian appliances need only an adapter. Plugs have 3 square pins and adapters are widely available.]]></string>

</resources>
