<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pmg"
    tools:context="uk.ac.cityofglasgowcollege.assessement3_pmg.ThingsToDoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/visiting_main" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:padding="5dp"
                    android:text="Top Reasons to Visit Glasgow "
                    android:textAlignment="center"
                    android:textColor="@color/pmg"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/top_reasons_visiting" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/visiting_one_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text="1. The City has World-Class Attractions you can visit for free"
                    android:textColor="@color/pmg" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    app:srcCompat="@drawable/visiting_one" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/visiting_one" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/visiting_two_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text='2. According to Wanderlust travel magazine, the city has an "impressive gastronomic scene"'
                    android:textColor="@color/pmg" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    app:srcCompat="@drawable/visiting_two" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/visiting_two" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/visiting_three_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text="3. Find stunning architecture hidden in plain sight "
                    android:textColor="@color/pmg" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    app:srcCompat="@drawable/visiting_three" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/visiting_three" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/visiting_four_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4. Discover the work of Glaswegian architect and designer Charles Rennie Mackintosh"
                    android:background="@color/white"
                    android:textColor="@color/pmg"
                    android:padding="10dp"/>

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    app:srcCompat="@drawable/visiting_four" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visiting_four"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/visiting_layout_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5. Let the locals take you on a tour - you'll get to know the city really well"
                    android:textColor="@color/pmg"
                    android:background="@color/white"
                    android:padding="10dp"/>

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="195dp"
                    app:srcCompat="@drawable/visiting_five" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visiting_five"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <Button
                    android:id="@+id/more_btn"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onMoreClick"
                    android:text="Need More?" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
